# Coasonix

./: AGENTS.md  Cargo.toml  README.md  package.json
.codex/skills/coagent/: SKILL.md
crates/coagent-mcp-server/: Cargo.toml
crates/coagent-mcp-server/src/: config.rs  main.rs
crates/coagent-mcp-server/src/backends/: acp_backend.rs  agent_profile.rs  backend_trait.rs  context.rs  mock.rs  mod.rs  reasonix.rs
crates/coagent-mcp-server/src/pipeline/: mod.rs
crates/coagent-mcp-server/src/tools/: review_diff.rs  tool_spec.rs
crates/coagent-mcp-server/tests/: mock_schema_validation.rs  reasonix_integration.rs
crates/coagent-runtime-core/src/: lib.rs
crates/coagent-runtime-core/tests/: artifact_policy.rs  canonical_json.rs  complex_integration.rs  list_active_tasks.rs  policy_engine.rs  runtime_kernel.rs  schema_registry.rs  sqlite_store.rs  state_machine.rs
crates/coagent-runtime-worker/src/: main.rs
crates/coagent-runtime-worker/tests/: json_rpc_worker.rs
crates/coasonix-runtime-core/: Cargo.toml
crates/coasonix-runtime-core/src/: lib.rs
crates/coasonix-runtime-core/tests/: canonical_json.rs  policy_engine.rs  runtime_kernel.rs  schema_registry.rs  sqlite_store.rs  state_machine.rs
crates/coasonix-runtime-worker/: Cargo.toml
docs/coagent/: README.md
docs/coasonix/: 00-collaboration-model.md  00-executive-summary.md  README.md
docs/implementation/: codex-side-gateway-roadmap.md  gaps-to-production.md  reasonix-feature-request.md  v1-mvp-execution-plan.md
plugins/coagent/: .mcp.json  hooks.json
schemas/: coagent-v1.schema.json
(+65 files in other folders)
