[workspace]
members = [
    "crates/coasonix-runtime-core",
    "crates/coasonix-runtime-worker",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
coasonix-runtime-core = { path = "crates/coasonix-runtime-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = { version = "0.46.8", default-features = false }
sha2 = "0.10"
thiserror = "2.0"
